--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <p style="margin: 0px;font-family: 'Poppins', sans-serif;font-weight: 700;font-size: 22px; color: #3B3389;">Sreenevas KM Iyenger</p>
-                                                    <p style="margin: 0px;font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 15px; color: #3B3389;">Global Education Director</p>
+                                                    <p style="margin: 0px;font-family: 'Poppins', sans-serif;font-weight: 700;font-size: 22px; color: #3B3389 !important;">Sreenevas KM Iyenger</p>
+                                                    <p style="margin: 0px;font-family: 'Quicksand', sans-serif;font-weight: bold;font-size: 15px; color: #3B3389 !important;">Global Education Director</p>
                                                 </td>
                                             </tr>
                                             <tr></tr>
@@ -123,13 +123,13 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background-color: #4969B1; border-radius: 3px; padding: 0px 0 0 3px; width: 715px;    height: 28px;">
+        <div style="background-color: #4969B1; border-radius: 3px; padding: 0px 0 0 3px; width: 692px;    height: 28px;">
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
                         <td style="padding: 0;">
                             <span>
-                            <a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;" alt=""></a>
+                            <a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;margin:0 5px;" alt=""></a>
                              </span>
                         </td>
                         <td style="padding: 0;">
@@ -140,7 +140,7 @@
                         </td>
 
                         <td style="padding: 0;"><span>
-                            <img src="https://vcantech.github.io/mathello-sign/img/color-box.png"  style="height: 28px;margin-left: 59px;" alt="">
+                            <img src="https://vcantech.github.io/mathello-sign/img/color-box.png"  style="height: 28px;margin-left: 32px;" alt="">
                         </span></td>
                     </tr>
                 </tbody>
