--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
                 <tbody>
                     <tr style="padding: 0;">
                         <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;margin:0 5px;" alt=""></a></span></td>
-                        <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;margin-left: 5px;" alt=""></a>
-                        </td>
+                        <td>&nbsp;</td>
+                        <td style="padding: 0;"><a href="https://mathellogenius.com" target="_blank">&nbsp;<img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;margin-left: 5px;" alt=""></a></td>
                         <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td>
                     </tr>
                 </tbody>
