--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 65px;" alt="">
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="#"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;"></a>
+                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;"></a>
                     </td>
                     <td>
                         <table>
