--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
                             </table>
                         </div>
                     </td>
-                    <td>
-                        <img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 65px;" alt="">
-                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td style="border-radius: 1px solid black;">
                         <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;"></a>
                     </td>
@@ -97,7 +101,13 @@
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;margin:0 5px;" alt=""></a></span></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;" alt=""></a></span></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td style="padding: 0;">
                             <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;margin-left: 5px;" alt=""></a>
                         </td>
