--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <span><a href="#">
+                                        <span><a href="https://www.facebook.com/mathellogenius" target="_blank">
                                             <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px;"></a></span>
-                                        <span><a href="#">
+                                        <span><a href="https://www.instagram.com/mathellogenius" target="_blank">
                                             <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px;"></a></span>
-                                        <span><a href="#">
+                                        <span><a href="https://www.twitter.com/mathellogenius" target="_blank">
                                             <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px;"></a></span>
-                                        <span><a href="#">
+                                        <span><a href="https://www.linkedin.com/company/mathello" target="_blank">
                                             <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px;"></a></span>
-                                        <span><a href="#">
+                                        <span><a href="https://www.youtube.com/@mathellogenius" target="_blank">
                                             <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px;"></a></span>
                                     </td>
                                 </tr>
