--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 20px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                    <img style="height: 24px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -106,6 +106,10 @@
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 19px;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
