--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
     <style>
 
     </style>
-    <div style="width:800px">
+    <div style="width:700px">
 
         <table class="table">
 
@@ -61,13 +61,8 @@
                             </table>
                         </div>
                     </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 28px;" alt=""></td>
+
 
                     <td>
                         <table>
@@ -100,14 +95,14 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background-color: #4969B1; border-radius: 3px; padding: 0px 0 0 3px; width: 692px;    height: 28px;">
+        <div style="background-color: #4969B1; border-radius: 3px; padding: 7px 0 0 3px; width: 692px;    height: 28px;">
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 19px;" alt=""></a></span></td>
+                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 15px;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -118,7 +113,7 @@
                         <td style="padding: 0;">
                             <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;margin-left: 5px;" alt=""></a>
                         </td>
-                        <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td>
+                        <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
                 </tbody>
             </table>
