--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
     <style>
 
     </style>
-    <div style="width:700px">
+    <div style="width:740px">
 
         <table class="table">
 
@@ -33,13 +33,10 @@
                                             <tr>
                                                 <td>
                                                     <img style="height: 24px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
                                                     <img style="height: 12px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
+
                                             <tr></tr>
                                             <tr>
                                                 <td>
@@ -61,7 +58,7 @@
                             </table>
                         </div>
                     </td>
-                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 28px;" alt=""></td>
+                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 70px;" alt=""></td>
 
 
                     <td>
@@ -95,27 +92,36 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background-color: #4969B1; border-radius: 3px; padding: 7px 0 0 3px; width: 692px;    height: 28px;">
+        <div style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 740px;    height: 28px;">
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 15px;" alt=""></a></span></td>
+                        <td style="padding: 0;"><span><a href="https://wa.me/971507783228" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 19px;" alt=""></a></span></td>
+                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 19px;" alt=""></a></span></td>
+                        <td style="padding: 0;"><span><a href="#!" ><img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 28px;" alt=""></a></span></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 19px;margin-left: 5px;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;margin-left: 5px;" alt=""></a>
                         </td>
                         <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
