--- a/index1.html
+++ b/index1.html
@@ -15,13 +15,13 @@
     <style>
 
     </style>
-    <div style="width:740px">
+    <div style="width:800px">
 
         <table class="table">
 
             <tbody>
                 <tr>
-                    <td> <img style="height:20px" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
+                    <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
                     <td>
@@ -32,8 +32,8 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 24px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
-                                                    <img style="height: 12px;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
+                                                    <img style="height: 24px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt=""> <br>
+                                                    <img style="height: 12px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
 
@@ -44,7 +44,7 @@
                                                         <table>
                                                             <tr>
                                                                 <td>
-                                                                    <a href="tel:+971507783228" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 18px;" alt=""> </a>
+                                                                    <a href="tel:+971507783228" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 18px;margin: 0;" alt=""> </a>
                                                                 </td>
 
                                                             </tr>
@@ -58,7 +58,7 @@
                             </table>
                         </div>
                     </td>
-                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 56px;" alt=""></td>
+                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 56px;margin: 0;" alt=""></td>
 
 
                     <td>
@@ -67,15 +67,15 @@
                                 <tr>
                                     <td>
                                         <span><a href="https://www.facebook.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.instagram.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.twitter.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.linkedin.com/company/mathello" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.youtube.com/@mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px;"></a></span>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -87,7 +87,7 @@
                         </table>
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;"></a>
+                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;margin: 0;"></a>
                     </td>
                 </tr>
             </tbody>
@@ -99,21 +99,21 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="https://wa.me/971507783228" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;" alt=""></a></span></td>
+                        <td style="padding: 0;"><span><a href="https://wa.me/971507783228" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;" alt=""></a></span></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="#!" ><img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 28px;" alt=""></a></span></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td style="padding: 0;"><span><a href="#!" ><img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 28px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -127,7 +127,7 @@
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;margin-left: 5px;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
                         <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
