--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,10 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 24px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt=""> <br>
+                                                    <img style="height: 24px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                </td>
+                                                <td>
+
                                                     <img style="height: 12px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
