--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -99,11 +99,19 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;">
+                            <div style="height: 18px;">
+                                <a href="https://wa.me/971509834557"><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a>
+                            </div>
+                        </td>
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="mailto:hello@mathellogenius.com" ><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;">
+                            <div style="height: 18px;">
+                                <a href="mailto:hello@mathellogenius.com"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 18px;margin: 0;" alt=""></a>
+                            </div>
+                        </td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -113,7 +121,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"><span><a href="#!" ><img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 28px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;">
+                            <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
+                        </td>
                         <td></td>
                         <td></td>
                         <td></td>
