--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -80,7 +80,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span style="font-size: 16px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
+                                        <span style="font-size: 15px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 600;">@mathellogenius</span>
                                     </td>
                                 </tr>
                             </tbody>
@@ -99,19 +99,21 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;">
-                            <div style="height: 18px;">
-                                <a href="https://wa.me/971509834557"><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a>
-                            </div>
-                        </td>
+                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <div style="height: 18px;">
+                            <span>
                                 <a href="mailto:hello@mathellogenius.com"><img src="https://vcantech.github.io/mathello-sign/img/email.png" style="height: 17px;margin: 0;" alt=""></a>
-                            </div>
+                            </span>
                         </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -124,10 +126,6 @@
                         <td style="padding: 0;">
                             <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
                         </td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
