--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -17,7 +17,7 @@
     </style>
     <div style="width:800px">
 
-        <table class="table">
+        <table class="table" style="min-width:98%;">
             <tbody>
                 <tr>
                     <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
@@ -31,7 +31,7 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 24px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                    <img style="height: 21.6px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
                                                 </td>
 
                                             </tr>
