--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="https://vcantech.github.io/mathello-sign/sreenevas-km-Iyengar.html" target="_blank">sreenevas-km-Iyengar</a>
         </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/bhanu-prakash.html" target="_blank">bhanu-prakash</a>
+        </li>
     </ol>
 </body>
 
